--- a/package.json
+++ b/package.json
@@ -11,19 +11,21 @@
   },
   "private": true,
   "dependencies": {
-    "typescript": "~4.5.2",
-    "@angular/cli": "~13.2.4",
-    "@angular/compiler-cli": "~13.2.0",
     "@angular/animations": "~13.2.0",
+    "@angular/cli": "~13.2.4",
     "@angular/common": "~13.2.0",
     "@angular/compiler": "~13.2.0",
+    "@angular/compiler-cli": "~13.2.0",
     "@angular/core": "~13.2.0",
     "@angular/forms": "~13.2.0",
     "@angular/platform-browser": "~13.2.0",
     "@angular/platform-browser-dynamic": "~13.2.0",
     "@angular/router": "~13.2.0",
+    "express": "^4.17.3",
+    "path": "^0.12.7",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
+    "typescript": "~4.5.2",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
@@ -40,11 +42,8 @@
     "karma-jasmine-html-reporter": "~1.7.0",
     "typescript": "~4.5.2"
   },
-
   "engines": {
     "node": "17.3.0",
     "npm": "8.5.1"
-
   }
-
 }
